--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <button>
+                Home
+            </button>
+            <button>
+                Menu
+            </button>
+            <button>
+                About
+            </button>
+            <button>
+                Contact Us
+            </button>
+        </nav>
+    </header>
+    <div id="content">
+        
+    </div>
 </body>
 </html>
