feat: add about contact and menu modules

--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,16 @@
 <body>
     <header>
         <nav>
-            <button>
+            <button id="Home">
                 Home
             </button>
-            <button>
+            <button id="Menu">
                 Menu
             </button>
-            <button>
+            <button id="About">
                 About
             </button>
-            <button>
+            <button id="Contact-Us">
                 Contact Us
             </button>
         </nav>
